<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="297dp"
        android:layout_height="369dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/poor_kids" />

    <TextView
        android:id="@+id/slide_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/_897_500"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slide_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:text="@string/anak_indonesia_tidak_sekolah_karena_biaya"
        android:textColor="#fff"
        android:textSize="14sp" />
</RelativeLayout>